--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,17 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".typemeals"></activity>
+        <activity android:name=".signUp"></activity>
+        <activity
+            android:name=".ui.login.SignUpActivity"
+            android:label="@string/title_activity_sign_up" />
+        <activity android:name=".typemeals" />
         <activity android:name=".ingridiants" />
         <activity android:name=".meals" />
         <activity android:name=".Follow" />
